# mssql_to_snowflake

./: .env  .gitignore  Dockerfile  README.md  con.session.sql  pyproject.toml  test_bcp.py
.dg/: telemetry.yaml
.github/workflows/: deploy.yml
.tmp_dagster_home_ou84flhk/history/: runs.db
.tmp_dagster_home_ou84flhk/history/runs/: .db  34e2090b-012f-4948-a5cc-748197df29aa.db  932e5bed-acb1-490a-9b21-dc01f682cdb8.db  f4ba61ed-4ea7-47c2-baee-07e5075f9e53.db  index.db
.tmp_dagster_home_ou84flhk/schedules/: schedules.db
.tmp_dagster_home_ou84flhk/storage/34e2090b-012f-4948-a5cc-748197df29aa/compute_logs/: rwjlzncj.err
.tmp_dagster_home_ou84flhk/storage/932e5bed-acb1-490a-9b21-dc01f682cdb8/compute_logs/: iovzpqmh.err
.tmp_dagster_home_ou84flhk/storage/f4ba61ed-4ea7-47c2-baee-07e5075f9e53/compute_logs/: gaxausbe.err
src/mdp_mssql_mine/: Export csv des tables SQL Server vers snowflake.docx  Requêtes Rapports 1.xlsx  definitions.py  load_vm_devis_dashboard_am.ps1
src/mdp_mssql_mine/defs/: assets.py  config.py  load_bcp_copy_into.py  snowflake_dest.py
src/mdp_mssql_mine/defs/dbt/: assets.py  dbt_assets.py  jobs.py  sensors.py
src/mdp_mssql_mine/defs/dbt/dbt_utils/: assets.py  create_dbt_asset.py  create_dbt_asset_.py  create_sensors.py  execute_dbt_job.py  jobs.py  resources.py  sensors.py
src/mdp_mssql_mine/defs/dbt/project/: dbt_project.yml
src/mdp_mssql_mine/defs/dbt/project/logs/: query_log.sql
src/mdp_mssql_mine/defs/dbt_ingest/: defs.yaml
src/mdp_mssql_mine/defs/load/: assets.py  config.py  load_bcp_copy_into.py  snowflake_dest.py
(+41 files in other folders)
