[project]
name = "mdp_mssql_mine"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.15",
    "dagster-dbt>=0.28.15",
    "dagster-dlt>=0.28.15",
    "dbt-snowflake>=1.11.2",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "mdp_mssql_mine"
registry_modules = [
    "mdp_mssql_mine.components.*",
]


